@@ -53,7 +53,6 @@ For checking large amounts of unsorted text you may want to set
 to 5 to get better performance.
 .TP
 .BI ignore_dot= n
-(voikkospell)
 .TP
 .BI accept_first_uppercase= n
 (voikkospell)
