@@ -1,3 +1,13 @@
+2007-01-16 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Support explicitly specified string lengths as opposed to only
+	  allowing null terminated strings in certain utility functions.
+	* VOIKKO_OPT_IGNORE_DOT is now respected during hyphenation as well,
+	  and corresponding option is supported by voikkohyphenate. This
+	  was needed because apparently at least OpenOffice.org feeds the
+	  trailing dot to the hyphenator extension and expects it to deal
+	  with it correctly.
+
 2007-01-06 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add a few more replacement suggestions, thanks to
